--- a/FrontEnd/src/assets/styles/we.css
+++ b/FrontEnd/src/assets/styles/we.css
@@ -6,7 +6,7 @@
 }
 
 html, body {
-  height: 100%;
+  min-height: 100vw;
   margin: 0;
   /* padding: 0;
   background-color: #FFB700; */
@@ -272,7 +272,7 @@ font-weight: 500;
 
 
 }
-@media(max-width:480px){
+@media(max-width:540px){
 
 
   .we-section{
