--- a/FrontEnd/src/assets/styles/service.css
+++ b/FrontEnd/src/assets/styles/service.css
@@ -259,15 +259,18 @@ border-radius: 21px;
     padding: 1rem;
   }
 
-  .graph20,
-  .graph21 {
-    display: none;
-  }
+ .graph20{
+  top:100%;
+  left:0;
+ }
+ .graph21{
+  width:10%;
+ }
 
   .images {
-    width: 100%;
+    width: 90%;
     max-width: 100%;
-    background-color: fuchsia;
+    /* background-color: fuchsia; */
     padding: 1rem;
   }
 
@@ -275,24 +278,52 @@ border-radius: 21px;
     width: 100%;
     max-width: 100%;
     padding: 2rem;
-    background-color: bisque;
+    /* background-color: bisque; */
   }
 
   .services {
     width: 100%;
     max-width: 100%;
-    background-color: pink;
+    /* background-color: pink; */
     display: flex;
     flex-wrap: wrap; /* si plusieurs blocs */
     justify-content: space-between;
     gap: 2rem;
+    /* background-color: #007200; */
   }
 
   .serv {
     width: 100%;
-    background-color: pink;
-    height: 10vh;
+    /* background-color: pink; */
     
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding:1.5rem;
+    gap:1.5rem;
+    
+    
+  }
+  .title{
+    gap:1.5rem;
+  }
+   .title h1{
+    font-size: 4rem;
+  }
+   .content-serv h2{
+    font-size: 2.5rem;
+  }
+  .content-serv p{
+    font-size: 1.6rem;
+  }
+  .icon-serv{
+    width:5rem;
+    height: 5rem;
+    padding:1rem;
+    
+  }
+  .icon-serv img{
+    width:100%;
   }
 }
 
