--- a/FrontEnd/src/assets/styles/story.css
+++ b/FrontEnd/src/assets/styles/story.css
@@ -33,7 +33,7 @@ body, h3, p {
     height: auto;
     gap:1rem;
     /* background-color:  #FCFAF8; */
-    background-color: red;
+    /* background-color: red; */
 
     padding-right: 2.5rem;
 }
