--- a/FrontEnd/src/assets/styles/donate.css
+++ b/FrontEnd/src/assets/styles/donate.css
@@ -263,7 +263,7 @@ button {
  
 
 }
-@media (max-width: 768px) and (min-width:500px ){
+@media (max-width: 768px) and (min-width:541px ){
   .donate-card {
     flex-direction: row;
    
@@ -274,6 +274,7 @@ button {
     padding: 2rem;
    max-width: 100vh;
    height: 100%;
+   /* background-color: pink; */
   }
 
   .content-box { 
@@ -299,7 +300,7 @@ button {
 
 
 }
-@media(max-width:500px) {
+@media(max-width:540px) {
 
   .donate-wrapper{
     display:flex;
