--- a/FrontEnd/src/assets/styles/header.css
+++ b/FrontEnd/src/assets/styles/header.css
@@ -292,6 +292,7 @@ body, h3, p {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  flex-direction: row-reverse;
   background: #ededed;
   border-radius: 125px;
   padding: 0.5rem 1rem;
