--- a/FrontEnd/src/assets/styles/activite.css
+++ b/FrontEnd/src/assets/styles/activite.css
@@ -1,315 +1,529 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-html, body {
+html,
+body {
   min-height: 100vw;
   margin: 0;
   /* padding: 0;
   background-color: #FFB700; */
 }
-.activities-section{
-    background-color: blue;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap:1.5rem;
-    padding-top:2rem;
-    overflow: hidden;
-     width: 100%;
-  overflow: hidden;
+
+.activities-section {
+  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  padding-top: 2rem;
+
+  width: 100%;
+
   height: auto;
-   
+
 }
-.activite-title{
-   display:flex;
+
+.activite-title {
+  display: flex;
   justify-content: right;
   align-items: center;
-  padding:1rem;
- 
-  width:100%;
+  padding: 1rem;
+
+  width: 100%;
   /* background-color: blue; */
   flex-direction: row-reverse;
-  gap:1.5rem;
+  gap: 1.5rem;
   z-index: 10;
   /* background-color: darkcyan; */
-  padding-right:6rem;
-    background-color: blueviolet;
+  padding-right: 6rem;
+  background-color: blueviolet;
 }
-.activite-name{
-    
-  
-    background-color: brown;
-    display:flex;
+
+.activite-name {
+
+
+  background-color: brown;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap:1rem;
+  gap: 1rem;
   z-index: 10;
 }
-.activite-name h1{
 
- display:flex;
+.activite-name h1 {
+
+  display: flex;
   flex-direction: row-reverse;
-  gap:1rem;
-  color:#FFC300;
-  
+  gap: 1rem;
+  color: #FFC300;
+
   font-weight: 500;
-font-size: clamp(1.5rem, 3vw, 3.5rem);
-z-index: 10;
+  font-size: clamp(1.5rem, 3vw, 3.5rem);
+  z-index: 10;
 
 }
-.activite-name span{
 
-     color: #38B000;
+.activite-name span {
+
+  color: #38B000;
 }
-.activite-name hr{
-   background: linear-gradient(180deg, #38B000 0%, #FFC400 107.1%);
-width:100%;
-height: 5px;
-border: none;
-border-radius: 158.74px;
+
+.activite-name hr {
+  background: linear-gradient(180deg, #38B000 0%, #FFC400 107.1%);
+  width: 100%;
+  height: 5px;
+  border: none;
+  border-radius: 158.74px;
 
 
 }
-.activite-p{
-    width:100%;
+
+.activite-p {
+  width: 100%;
   background-color: aquamarine;
-  display:flex;
+  display: flex;
   justify-content: right;
   align-items: right;
 
-  
-  padding-top:1rem; 
+
+  padding-top: 1rem;
   padding-bottom: 1rem;
-  display:flex;
+  display: flex;
   justify-content: right;
   align-items: center;
-  padding-right:5rem
+  padding-right: 5rem
 }
-.activite-p p{
-    font-weight: 400;
+
+.activite-p p {
+  font-weight: 400;
 
 
-letter-spacing: 0%;
-text-align: right;
-font-size: clamp(1rem, 3vw, 1.5rem);
+  letter-spacing: 0%;
+  text-align: right;
+  font-size: clamp(1rem, 3vw, 1.5rem);
   line-height: 1.6;
-  width:60%;
+  width: 60%;
 }
-.activite-groupe{
 
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap:2rem;
-    background-color: chartreuse;
-  width:100%;
-  padding:5rem;
+.activite-groupe {
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  /* background-color: chartreuse; */
+  width: 100%;
+  padding: 2rem;
   /* padding:5rem; */
-   
-   
-   
-}
-.activite{
-    display:flex;
-    flex-direction: row-reverse;
-    background-color: crimson;
- width:80%;
- justify-content: space-between;
- align-items: center;
- height:auto;
-border-radius: 25.2px;
-
- 
- 
- 
-}
-.btn-groupe{
-    display:flex;
-    flex-direction: row;
-    justify-content: right;
-    align-items: center;
-    gap:2rem;
-    background-color: aqua;
-   
-  border-radius: 
-3.63px;
-width:100%;
-padding-top:1rem;
-padding-bottom: 1rem;
-padding-right:0.5rem
 
 
-    
+
 }
-.right-btn{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    gap:0rem;
-    padding:1rem;
-    background: #38B000;
-    box-shadow: 0px 1.01px 2.01px 0px #1018280D;
-    border-radius:8.05px;
-    width:40%;
-    /* padding:1rem; */
-    color:white;
-    /* padding:1rem; */
-    
-    font-weight: 500;
+
+.activite {
+  display: flex;
+  flex-direction: row-reverse;
+  background-color: white;
+  width: 80%;
+  justify-content: space-between;
+  align-items: center;
+  height: auto;
+  border-radius: 25.2px;
+  align-items: stretch;
+  height: 80vh;
+  align-items: stretch;
+
+
+
+
+
+
+}
+
+.btn-groupe {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  align-items: center;
+  gap: 2rem;
+  /* background-color: aqua; */
+
+  border-radius:
+    3.63px;
+  width: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 0.5rem;
+  /* height:40vh */
+
+
+
+}
+
+.right-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0rem;
+  padding: 1rem;
+  background: #38B000;
+  box-shadow: 0px 1.01px 2.01px 0px #1018280D;
+  border-radius: 8.05px;
+  width: 40%;
+  /* padding:1rem; */
+  color: white;
+  /* padding:1rem; */
+
+  font-weight: 500;
   font-size: clamp(0.75rem, 3vw, 1rem);
-  line-height: 1; 
+  line-height: 1;
   letter-spacing: 0;
   text-align: right;
-  height:7vh
- 
-
-
+  height: 7vh
 }
-.activite-content h2{
 
-   
+.activite-content h2 {
+
+
   font-weight: 500;
   font-size: clamp(1.5rem, 3vw, 1.8rem);
-  line-height: 1.35; 
+  line-height: 1.35;
   letter-spacing: normal;
   text-align: right;
   text-transform: capitalize;
-  width:100%;
-  background-color: aqua;
-  direction:rtl
+  width: 100%;
+  /* background-color: aqua; */
+  direction: rtl
 }
-.left-btn{
-display:flex;
-justify-content: center;
-align-items: center;
 
-background: #FFB700;
-color:white;
-gap:0.5rem;
-/* padding:1rem; */
+.left-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-/* padding:1rem; */
-    font-weight: 500;
+  background: #FFB700;
+  color: white;
+  gap: 0.5rem;
+  /* padding:1rem; */
+
+  /* padding:1rem; */
+  font-weight: 500;
   font-size: clamp(0.75rem, 3vw, 1rem);
-  line-height: 1; 
+  line-height: 1;
   letter-spacing: 0;
   text-align: right;
-   border-radius: 
-8.05px;
-height:7vh
+  border-radius:
+    8.05px;
+  height: 7vh
+}
+
+.activite-content p {
+  display: flex;
+  justify-content: right;
+  width: 100%;
+  /* background-color: antiquewhite; */
+  align-items: right;
+  text-align: right;
+  direction: rtl
+}
+
+.activite-content h4 {
+  text-align: right;
+  /* background-color: #38B000; */
+  color: black;
+  display: flex;
+  justify-content: right;
+  width: 100%;
+
+}
+
+.activite-content h4 span {
+  text-transform: capitalize;
+  color: #575757;
+
+}
+
+.activite-content {
+
+
+  /* background-color: chocolate; */
+  width: 50%;
+  padding: 2rem;
+  padding-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  flex-direction: column;
 
 
 }
-.activite-content p{
-    display:flex;
-    justify-content: right;
-    width:100%;
-    background-color: antiquewhite;
-    align-items: right;
-    text-align: right;
-    direction:rtl
+
+.image-div {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  border-top-right-radius: 25.2px;
+  border-bottom-right-radius: 25.2px;
+  position: relative;
+  height: auto;
+  padding: 1rem;
+  min-height: 60vh;
+  padding: 1.5rem;
+
+
+  background-color: darkmagenta;
 }
-.activite-content h4{
-    text-align: right;
-    background-color: #38B000;
-    color:black;
-    display:flex;
-    justify-content: right;
-    width:100%;
-    
-}
-.activite-content h4 span{
-    text-transform: capitalize;
-    color:#575757;
 
-}
-.activite-content{
+.activite-pecture {
 
-
-    background-color: chocolate;
-    width:50%;
-    padding:2rem;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    gap:1.5rem;
-    flex-direction: column;
-    
-
-}
-.image-div{
-    width:50%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    height:auto;
-border-top-right-radius: 25.2px;
-border-bottom-right-radius: 25.2px;
-position:relative;
-
-
-
- 
-   
-    background-color: darkmagenta;
-}
-.activite-pecture{
-    width:90%;
-    padding:1rem;
-    border-radius: 
-16.8px;
-   object-fit: contain;
-   position:relative;
+  width: 80%;
+  height: 100%;
+  height: 70vh;
+  background-size: cover;
+  border-radius: 16px;
+  background-repeat: no-repeat;
 }
 
 
-.btn-activite{
-position:absolute;
-    z-index: 10;
-     
+
+
+
+.btn-activite {
+  position: absolute;
+  z-index: 10;
+
   font-weight: 500;
- font-size: clamp(0.95rem, 2.5vw, 1.2rem);
+  font-size: clamp(0.95rem, 2.5vw, 1.2rem);
 
-  line-height: 1.70625rem; 
+  line-height: 1.70625rem;
   letter-spacing: normal;
   text-transform: capitalize;
   /* width: 3.375rem; 
   height: 1.75rem;   */
   color: #575757;
-  top:5%;
-  right:15%;
-  width:24%;
-  height:auto;
+  top: 8%;
+  right: 15%;
+  width: 24%;
+  height: auto;
   background: #F7F2ED;
-border-radius: 
-84px;
-padding:1rem;
-height: 7vh;
-display:flex;
-justify-content: center;
-align-items: center;
- font-weight: 500;
+  border-radius:
+    84px;
+  padding: 1rem;
+  height: 7vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
   font-size: clamp(1rem, 2.5vw, 1.4rem);
-  line-height: 1.7rem; 
+  line-height: 1.7rem;
   letter-spacing: normal;
   text-transform: capitalize;
 
 }
-.out{
- width: 9px;
-height: 9px;
+
+.out {
+  width: 9px;
+  height: 9px;
 
 
 
 
-    background: #575757;
-    border-radius: 50%;
+  background: #575757;
+  border-radius: 50%;
 
 }
 
+.next,
+.prev {
+
+  border: 0.55px solid #000000;
+  background: #FFFFFF;
+  width: 53px;
+  height: 53px;
+
+
+  border-width: 0.55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+}
+
+.lgn {
+
+
+
+
+
+
+
+  /* border: 3.01px solid #000000 */
+
+}
+
+@media (max-width: 1024px) and (min-width: 481px) {
+
+  /* tes styles */
+  .activite {
+
+    background-color: red;
+    width: 100%;
+
+  }
+
+  .image-div {
+    background: #575757;
+    width: 50%;
+    padding: 2rem;
+  }
+
+  .activite-pecture {
+
+    width: 100%;
+
+  }
+
+  .activite-content {
+    width: 50%;
+    background-color: antiquewhite;
+
+    padding-top: 2rem;
+  }
+
+  .btn-groupe {
+    background-color: blue;
+    width: 100%;
+  }
+
+}
+
+
+
+@media(max-width:480px) {
+
+  .activite-section {
+    padding: 1rem;
+
+  }
+
+  .activite-groupe {
+    padding: 0;
+    background-color: pink;
+    gap: 0;
+  }
+
+  .activite {
+
+
+    flex-direction: column;
+    background-color: aquamarine;
+    height: auto;
+    border-radius: 0;
+  }
+
+  .activite--groupe {
+
+
+
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  .activite-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+
+
+    border-radius: 0;
+  }
+
+  .image-div {
+    width: 100%;
+    border-radius: 0;
+    min-height:40vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding:1rem;
+  }
+
+  .activite-pecture {
+   min-height:80%;
+   width:100%;
+   
+  
+    /* background-color: #38B000; */
+    background-size: cover;
+    
+  }
+
+  .next,
+  .prev {
+    /* display:none */
+  }
+
+  .btn-groupe {
+    width: 100%;
+    background-color: #575757;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .right-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:1rem;
+   
+    width: 100%;
+  }
+  .left-btn{
+    padding:1;
+  }
+  .activite-title{
+    background-color: darkcyan;
+     padding-right:1rem;
+  }
+  .activite-title img{
+    width:8%;
+  }
+  .activite-p{
+  
+    background-color: #38B000;
+     padding-right:1rem;
+  }
+  .activite-p p{
+   
+      width:100%;
+  }
+  .btn-activite{
+    background-color:red;
+  
+
+}
+
+
+.out{
+
+  width:20px;
+ 
+}}
